# openapi-client-generator

./: .gitignore  README.md  pyproject.toml  sqldbm.json
generated_manifests/: sqldbm_manifest.json
openapi_client_generator/: openai_client_generator_from_manifests.py  openapi_generate_manifests.py
openapi_client_generator/templates/: openapi_client_template.py.j2  openapi_client_test_template.py.j2
sqldbm_api_client/: sqldbm_api_client.py
tests/: test_sqldbm_api_client.py
