[project]
name = "openapi-client-generator"
version = "0.1.0"
description = "OpenAPI Client Generator"
authors = [
    {name = "Adrian Gonzalez Rodriguez", email = "adrian.gonzalez@esynergy.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

